# EasySPHSimulator

./: CMakeLists.txt  main.cpp
include/: SPHParticle.h  SPHSimulator.h
src/: SPHSimulator.cpp
